# customer-churn-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
churn_prediction/: api.py  config.py  data.py  eda.py  evaluation.py  main.py  models.py  predict.py  preprocessing.py
data/: customer_churn.csv
tests/: conftest.py  test_api.py  test_config.py  test_data.py  test_eda.py  test_evaluation.py  test_main.py  test_models.py  test_predict.py  test_preprocessing.py
