[project]
name = "customer-churn-prediction"
version = "0.1.0"
description = "Binary classification model to predict customer churn for a telecom scenario"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "joblib>=1.3.0",
]

[project.scripts]
train = "churn_prediction.main:main"
serve = "churn_prediction.api:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
